fixed image alignment

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header {
 	height: 100%;
 	display: flex;
 	justify-content: center;
-	align-items: start;
+	/* align-items: start; */
 	flex-direction: column;
 }
 .left-hero {
@@ -141,13 +141,15 @@ header {
 .right-hero {
 	/* background-color: green; */
 	display: flex;
-	justify-content: start;
+	justify-content: center;
+	align-items: center;
 }
 .hero-image-container {
 	width: 90%;
 	height: 60%;
 	background-color: black;
 	border-radius: 30px;
+	text-align: center;
 }
 
 .section-one {
